# mic2e-demo

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
app/: env.py  lifespan.py  main.py
app/clients/: inference_client.py  storage_client.py
app/core/chat2edit/: mic2e_context_provider.py  mic2e_context_strategy.py  mic2e_exemplars.py  mic2e_prompting_strategy.py
app/core/chat2edit/functions/: __init__.py  apply_filter.py  flip_entities.py  generate_object.py  generate_objects.py  get_box.py  inpaint_objects.py  paste_entities.py  remove_entities.py  replace_entities.py  respond_user.py  rotate_entities.py  scale_entities.py  segment_object.py  segment_objects.py  shift_entities.py
app/core/chat2edit/models/: __init__.py  box.py  image.py  object.py  point.py  referent.py  scribble.py  text.py  variable.py
app/core/chat2edit/models/fabric/filters/: __init__.py  base_filter.py  black_white_filter.py  blur_filter.py  brightness_filter.py  contrast_filter.py  invert_filter.py  saturation_filter.py
app/core/chat2edit/models/fabric/objects/: __init__.py  fabric_circle.py  fabric_group.py  fabric_image.py  fabric_object.py  fabric_path.py  (+2 more)
app/core/chat2edit/utils/: __init__.py  image_utils.py  inpaint_utils.py  object_utils.py  scribble_utils.py
app/dependencies/: chat2edit_dependencies.py
app/routes/: chat2edit_routes.py
app/schemas/: chat2edit_schemas.py  common_schemas.py
app/services/: chat2edit_service.py
app/services/impl/: chat2edit_service_impl.py
app/utils/: decorators.py  factories.py  files.py  image_utils.py
static/: index.html
